--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ motor
 pillow
 psutil
 httpx==0.27.2
-py-tgcalls==0.9.7
+py-tgcalls
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
