--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,6 @@ unidecode
 git+https://github.com/yt-dlp/yt-dlp.git@master
 youtube-search
 youtube-search-python
-uvloop==0.17.0
+uvloop
 yt-dlp
 telegraph
