--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ motor
 pillow
 psutil
 httpx==0.27.2
-py-tgcalls
+py-tgcalls==0.9.7
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
@@ -25,6 +25,6 @@ unidecode
 git+https://github.com/yt-dlp/yt-dlp.git@master
 youtube-search
 youtube-search-python
-uvloop
+uvloop==0.17.0
 yt-dlp
 telegraph
