Comment out uvloop version in requirements.txt
Comment out the specific version of uvloop.

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,6 @@ unidecode
 git+https://github.com/yt-dlp/yt-dlp.git@master
 youtube-search
 youtube-search-python
-uvloop==0.21.0
+#uvloop==0.21.0
 yt-dlp
 telegraph
