--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
 pyyaml
+pytz
 requests
 speedtest-cli
 spotipy
